Socials overflow fix

--- a/src/Styles/Socials.css
+++ b/src/Styles/Socials.css
@@ -151,7 +151,7 @@
     }
 
     .socials-sites{
-        font-size:1.3rem;
+        font-size:1.1rem;
     }
 
 }
